[package]
name = "latency-benchmark"
edition.workspace = true
rust-version = { workspace = true }
description = "Real-network benchmark for libp2p Connection::poll latency under high RTT"
version = "0.1.0"
publish = false
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
futures = { workspace = true }
hdrhistogram = "7.5"
libp2p-core = { workspace = true }
libp2p-identity = { workspace = true, features = ["ed25519", "rand"] }
libp2p-plaintext = { path = "../transports/plaintext" }
libp2p-request-response = { path = "../protocols/request-response" }
libp2p-swarm = { path = "../swarm", features = ["tokio"] }
libp2p-tcp = { path = "../transports/tcp", features = ["tokio"] }
libp2p-yamux = { path = "../muxers/yamux" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "signal", "io-std", "io-util"] }
tokio-metrics = "0.5"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "registry"] }
